--- a/Views/Shared/_TALayout.cshtml
+++ b/Views/Shared/_TALayout.cshtml
@@ -90,21 +90,15 @@
                                     </a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a id="child-trogiang-resultapply" class="child-nav-link nav-link "
-                                       href="@Url.Action("ResultApply", "TeachingAssistant")">
-                                        Kết quả đăng ký
-                                    </a>
-                                </li>
-                                <li class="nav-item ">
                                     <a id="child-trogiang-tasklist" class="child-nav-link nav-link "
                                        href="@Url.Action("TaskList", "TeachingAssistant")">
                                         Công việc
                                     </a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a id="child-trogiang-evaluation" class="child-nav-link nav-link "
-                                       href="@Url.Action("Evaluation", "TeachingAssistant")">
-                                        Đánh giá công việc
+                                    <a id="child-trogiang-reviewtask" class="child-nav-link nav-link "
+                                       href="@Url.Action("Index", "ReviewTask")">
+                                        Kết quả đánh giá
                                     </a>
                                 </li>
                             </ul>
