--- a/Views/ReviewTask/_OpenEditReviewTask.cshtml
+++ b/Views/ReviewTask/_OpenEditReviewTask.cshtml
@@ -40,7 +40,7 @@
                             <th class="ps-3 text-nowrap">T.Hạn hoàn thành</th>
                             <th class="ps-3 text-nowrap">Nơi làm việc</th>
                             <th class="ps-3 text-nowrap">Kết quả mong đợi</th>
-                            <th class="ps-0 pe-0 text-nowrap"></th>
+                            <th class="ps-3 pe-0 text-nowrap">Kết quả</th>
                         </tr>
                     </thead>
                     <tbody>
