--- a/Views/TeachingAssistant/ResultApply.cshtml
+++ b/Views/TeachingAssistant/ResultApply.cshtml
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <!-- table  -->
-                <div class="card-body">
+                <div class="card-body" id="load-content-filter">
                     <div class="table-card">
                         <table id="dataTableBasic" class="table table-hover" style="width:100%">
                             <thead class="table-light">
@@ -130,7 +130,7 @@
                                             {
                                                 if (item.DanhGiaPhongVan.First().KetLuanDat == true)
                                                 {
-                                                    <span class="badge bg-success"><i class="bi bi-ban me-2"></i>Đã phân công</span>
+                                                    <span class="badge bg-success"><i class="bi bi-check-circle me-2"></i>Đã phân công</span>
                                                 }
                                                 else
                                                 {
@@ -139,8 +139,8 @@
                                             }
                                         </td>
                                         <td valign="middle" class="text-nowrap">
-                                            <a style="font-size: 20px" data-bs-toggle="modal" data-bs-target="#apply" role="button" @*id="openSua-@item.ID" fullname="@item.Ma - @item.HoTen" name="@item.ID"*@ class="text-primary">
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem danh sách công việc"><i class="bi bi-info-square me-2"></i></span>
+                                            <a style="font-size: 20px" data-bs-toggle="modal" id="Opentasklist-@item.LopHocPhan.ID" role="button" titleTaskList="Chi tiết công việc LHP: @item.LopHocPhan.MaLHP - @item.LopHocPhan.TenHP."name="@item.LopHocPhan.ID" class="text-primary">
+                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết công việc"><i class="bi bi-info-square me-2"></i></span>
                                             </a>
                                         </td>
                                     </tr>
@@ -153,5 +153,23 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="taskList" tabindex="-1" role="dialog" aria-labelledby="taskList" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="taskListTitle"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="contentTaskList">
 
+                </div>
+                <div class="modal-footer">
+                    <button id="btnTaskListClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+<script src="~/Validation/SVandTA/resultApply/opentask.js"></script>
