--- a/Views/Users/_Filter.cshtml
+++ b/Views/Users/_Filter.cshtml
@@ -22,7 +22,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var items in Model)
+                    @foreach (var items in Model.ToList())
                     {
                         var item = items.TaiKhoan.First();
                         i++;
